--- a/src/app/inscription/inscription.component.css
+++ b/src/app/inscription/inscription.component.css
@@ -3,14 +3,17 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height:  100vh;
+  height:  fit-content;
   gap:  1em;
+  border-radius: 16px;
 }
 .big-container{
+  display: flex;
   width: 100vw;
-  background-image: url("../../assets/login-bg.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  height: 100vh;
+  background-color: #dce1dd;
+  align-items: center;
+  justify-content: center;
 }
 .logo-sary {
   width: 64px;
