--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,61 +2,50 @@
   <mat-sidenav #drawer class="sidenav" fixedInViewport [mode]="'side'" [opened]="true">
     <div *ngIf="divVisible$ | async">
       <div class="navbar">
-        <mat-nav-list *ngIf="isClient()" class="mat-nav-list">
-          <a mat-list-item routerLink="/profil"><mat-icon>account_circle</mat-icon> Profil</a>
-          <a mat-list-item routerLink="/home"><mat-icon>home</mat-icon> Accueil</a>
-          <a mat-list-item routerLink="/rdv"><mat-icon>event_note</mat-icon> Rendez-vous</a>
-          <a mat-list-item routerLink="/historic"><mat-icon>book</mat-icon> Historiques</a>
+        <mat-nav-list *ngIf="isClient()" class="nav-item" >
+          <a mat-list-item routerLink="/profil"  class="nav-item" ><mat-icon>account_circle</mat-icon> Profil</a>
+          <a mat-list-item routerLink="/home" class="nav-item" ><mat-icon>home</mat-icon> Accueil</a>
+          <a mat-list-item routerLink="/rdv" class="nav-item" ><mat-icon>event_note</mat-icon> Rendez-vous</a>
+          <a mat-list-item routerLink="/historic" class="nav-item" ><mat-icon>book</mat-icon> Historiques</a>
         </mat-nav-list>
 
         <mat-nav-list *ngIf="isEmploye()" class="mat-nav-list">
-          <a mat-list-item routerLink="/profil"><mat-icon>account_circle</mat-icon> Profil</a>
-          <a mat-list-item routerLink="/suiviTaches"><mat-icon>assignment</mat-icon> Ma journée </a>
+          <a mat-list-item routerLink="/profil" class="nav-item" ><mat-icon>account_circle</mat-icon> Profil</a>
+          <a mat-list-item routerLink="/suiviTaches" class="nav-item" ><mat-icon>assignment</mat-icon> Ma journée </a>
+
+          <mat-expansion-panel *ngIf="isEmploye()">
+            <mat-expansion-panel-header>
+              <mat-panel-title>Services</mat-panel-title>
+            </mat-expansion-panel-header>
+            <mat-nav-list>
+              <a mat-list-item routerLink="/servNonAssigne"  class="nav-item" >Services non-assignés</a>
+            </mat-nav-list>
+          </mat-expansion-panel>
+
+          <mat-expansion-panel *ngIf="isEmploye()">
+            <mat-expansion-panel-header>
+              <mat-panel-title><mat-icon>book</mat-icon> Rendez-vous</mat-panel-title>
+            </mat-expansion-panel-header>
+            <mat-nav-list>
+              <a mat-list-item routerLink="/HistoriqueRDV" class="nav-item" ><mat-icon>book</mat-icon> Historique</a>
+              <a mat-list-item routerLink="/listeRDV" class="nav-item" ><mat-icon>calendar_today</mat-icon> Mes Rendez-vous aujourd'hui</a>
+            </mat-nav-list>
+          </mat-expansion-panel>
+          <mat-expansion-panel *ngIf="isEmploye()">
+            <mat-expansion-panel-header>
+              <mat-panel-title><mat-icon>list_alt</mat-icon> Services</mat-panel-title>
+            </mat-expansion-panel-header>
+            <mat-nav-list>
+              <a mat-list-item routerLink="/servNonAssigne" class="nav-item" ><mat-icon>list_alt</mat-icon> Services non-assignés</a>
+            </mat-nav-list>
+          </mat-expansion-panel>
         </mat-nav-list>
-
-        <mat-expansion-panel *ngIf="isEmploye()">
-          <mat-expansion-panel-header>
-            <mat-panel-title>Services</mat-panel-title>
-          </mat-expansion-panel-header>
-          <mat-nav-list>
-            <a mat-list-item routerLink="/servNonAssigne">Services non-assignés</a>
-          </mat-nav-list>
-        </mat-expansion-panel>
-
         <mat-nav-list *ngIf="isManager()">
-          <a mat-list-item routerLink="/home">Accueil</a>
-          <a mat-list-item routerLink="/clients">Client</a>
-          <a mat-list-item routerLink="/employes">Employé</a>
-          <a mat-list-item routerLink="/offres">Offre</a>
-          <a mat-list-item routerLink="/manageService">Service</a>
-          <a mat-list-item routerLink="/profil">Mon Profil</a>
-        </mat-nav-list>
-
-        <mat-expansion-panel *ngIf="isEmploye()">
-          <mat-expansion-panel-header>
-            <mat-panel-title><mat-icon>book</mat-icon> Rendez-vous</mat-panel-title>
-          </mat-expansion-panel-header>
-          <mat-nav-list>
-            <a mat-list-item routerLink="/HistoriqueRDV"><mat-icon>book</mat-icon> Historique</a>
-            <a mat-list-item routerLink="/listeRDV"><mat-icon>calendar_today</mat-icon> Mes Rendez-vous aujourd'hui</a>
-          </mat-nav-list>
-        </mat-expansion-panel>
-
-        <mat-expansion-panel *ngIf="isEmploye()">
-          <mat-expansion-panel-header>
-            <mat-panel-title><mat-icon>list_alt</mat-icon> Services</mat-panel-title>
-          </mat-expansion-panel-header>
-          <mat-nav-list>
-            <a mat-list-item routerLink="/servNonAssigne"><mat-icon>list_alt</mat-icon> Services non-assignés</a>
-          </mat-nav-list>
-        </mat-expansion-panel>
-
-        <mat-nav-list *ngIf="isManager()">
-          <a mat-list-item routerLink="/clients"><mat-icon>supervised_user_circle</mat-icon> Client</a>
-          <a mat-list-item routerLink="/employes"><mat-icon>supervised_user_circle</mat-icon> Employé</a>
-          <a mat-list-item routerLink="/offres"><mat-icon>stars</mat-icon> Offre</a>
-          <a mat-list-item routerLink="/manageService"><mat-icon>list_alt</mat-icon> Service</a>
-          <a mat-list-item routerLink="/profil"><mat-icon>account_circle</mat-icon> Profil</a>
+          <a mat-list-item routerLink="/clients" class="nav-item" ><mat-icon>supervised_user_circle</mat-icon> Client</a>
+          <a mat-list-item routerLink="/employes" class="nav-item" ><mat-icon>supervised_user_circle</mat-icon> Employé</a>
+          <a mat-list-item routerLink="/offres" class="nav-item" ><mat-icon>stars</mat-icon> Offre</a>
+          <a mat-list-item routerLink="/manageService" class="nav-item" ><mat-icon>list_alt</mat-icon> Service</a>
+          <a mat-list-item routerLink="/profil" class="nav-item" ><mat-icon>account_circle</mat-icon> Profil</a>
         </mat-nav-list>
       </div>
     </div>
