--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,12 +8,13 @@
                         <mat-card-header>
                             <div mat-card-avatar class="avatar" >
                                 <mat-icon>event</mat-icon>
-                            </div>
+                            </div> 
                             <mat-card-title>Prochain rendez-vous</mat-card-title>
                             <mat-card-subtitle>{{ rdv.dateHeure | date:'dd-MM-yyyy' }} à {{ rdv.dateHeure | date:'HH:mm' }}</mat-card-subtitle>
+                            <mat-card-subtitle>à un prix total de: {{ totalRdv.totalMontant }}Ar </mat-card-subtitle>
                         </mat-card-header>
                         <mat-card-actions>
-                            <!-- <button mat-button color="primary" (click)="voirDetails(rdv._id)">Voir Détails</button> -->
+                            <button mat-button color="primary" (click)="voirDetailsRDV(rdv._id)">Voir Détails</button>
                           </mat-card-actions>
                     </mat-card>
                 </div>
@@ -25,13 +26,13 @@
                                 <mat-icon>event</mat-icon>
                             </div>
                             <mat-card-title>{{offre.nom}}</mat-card-title>
-                                <mat-card-subtitle class="mb-3" >Du {{ offre.dateDebut | date:'dd-MM-yyyy' }} au {{offre.dateFin | date:'dd-MM-yyyy'}}</mat-card-subtitle  >
+                                <mat-card-subtitle class="mb-3" >Du {{ offre.dateDebut | date:'dd-MM-yyyy' }} au {{offre.dateFin | date:'dd-MM-yyyy'}} à un prix imbattable de {{offre.prixTotal}}</mat-card-subtitle  >
                                 <mat-card-subtitle>
                                     {{ offre.description }}
                                 </mat-card-subtitle>
                         </mat-card-header>
                         <mat-card-actions>
-                            <!-- <button mat-button color="primary" (click)="voirDetails(rdv._id)">Voir Détails</button> -->
+                            <button mat-button color="primary" (click)="voirDetailsOffre(offre._id)">Voir Détails</button>
                           </mat-card-actions>
                     </mat-card>
                 </div>
@@ -65,6 +66,30 @@
             </div>
             </div>
         </div>
+        <div class="col-md-6 col-xs-12" *ngIf="offreDetails && selectedOffreId">
+            <div class="card">
+            <div class="card-header">
+                <h5 class="card-title">Détails de l'Offre</h5>
+            </div>
+            <div class="card-body">
+                <ul class="list-group">
+                <li *ngFor="let service of offreDetails" class="list-group-item">
+                    <div>
+                    <strong>{{ service.nom }}</strong>
+                    </div>
+                    <div>
+                    <span>Delai : {{ service.delai }}</span>
+                    </div>
+                    <div>
+                    <span>Commission : {{ service.commission }}</span>
+                    </div>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </div>
+
+
     </div>
     <div *ngIf="isManager()" >
        <app-stat-rdv></app-stat-rdv> 
