rectif-dimension-navbar--footer--home-rendez-vous-titre

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,4 @@
 <mat-toolbar color="primary" class="footer">
   <p>© 2024</p>
-  <img src="assets/beaute-verte.png" alt="Logo" class=" logo-sary">
-  <p style="text-align: center;">Diamondra & Fanjava</p>
+  <p style="text-align: center;">By RABEARIMANANA HARINIAINA Kanto Fanjava & RANADISON Koloinanirina Diamondra</p>
 </mat-toolbar>
