--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,12 @@
       </button>
       <p></p>
       <span>Pas encore de compte? </span><a [routerLink]="['/inscription']">Inscrivez-vous</a>
+      <br><br>
+      <div class="d-flex flex-column" style="color: #8e8e8e;" >
+        <span>Nom : Manager | Mdp : manager </span>
+        <span>Nom : Employe3 | Mdp : employe3 </span>
+        <span>Nom : JB | Mdp : jb </span>
+      </div>
     </form>
   </div>
 </div>
-  
