--- a/src/app/rdv/liste-today/rdv-liste.component.html
+++ b/src/app/rdv/liste-today/rdv-liste.component.html
@@ -3,26 +3,28 @@
     <!-- Colonne pour la liste des rendez-vous -->
     <div class="col-md-6 col-xs-12">
       <div class="rappel-list">
-        <h1 class="rappel-title">Mes rendez-vous d'aujourd'hui</h1>
-        <mat-card *ngFor="let rdv of rendezVous" class="rappel-card">
-          <mat-card-header>
-            <div mat-card-avatar class="avatar">
-              <mat-icon>event</mat-icon>
-            </div>
-            <mat-card-title>Rendez-vous</mat-card-title>
-            <mat-card-subtitle>{{ rdv.dateHeure | date:'dd-MM-yyyy à HH:mm' }}</mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-actions>
-            <button mat-button color="primary" (click)="voirDetails(rdv._id)">Voir Détails</button>
-          </mat-card-actions>
-        </mat-card>
+        <div *ngIf="rendezVous">
+          <mat-card *ngFor="let rdv of rendezVous" class="rappel-card">
+            <h1 class="rappel-title">Mes rendez-vous d'aujourd'hui</h1>
+            <mat-card-header>
+              <div mat-card-avatar class="avatar">
+                <mat-icon>event</mat-icon>
+              </div>
+              <mat-card-title>Rendez-vous</mat-card-title>
+              <mat-card-subtitle>{{ rdv.dateHeure | date:'dd-MM-yyyy à HH:mm' }}</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-actions>
+              <button mat-button color="primary" (click)="voirDetails(rdv._id)">Voir Détails</button>
+            </mat-card-actions>
+          </mat-card>
+        </div>
         <br>
-        <div *ngIf="!rendezVous" class="no-rdv-message">
+        <div *ngIf="!rendezVous || rendezVous.length === 0" class="no-rdv-message">
           <h2>Aucun rendez-vous disponible</h2>
         </div>
       </div>
     </div>
-    
+
     <!-- Colonne pour les détails du rendez-vous sélectionné -->
     <div class="col-md-6 col-xs-12" *ngIf="rdvDetails && selectedRdvId">
       <div class="card">
@@ -46,6 +48,6 @@
         </div>
       </div>
     </div>
-    
+
   </div>
 </div>
