--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -32,6 +32,7 @@
           </mat-expansion-panel>
         </mat-nav-list>
         <mat-nav-list *ngIf="isManager()">
+           <a mat-list-item routerLink="/home" class="nav-item" ><mat-icon>home</mat-icon> Accueil</a>
           <a mat-list-item routerLink="/clients" class="nav-item" ><mat-icon>supervised_user_circle</mat-icon> Client</a>
           <a mat-list-item routerLink="/employes" class="nav-item" ><mat-icon>supervised_user_circle</mat-icon> Employé</a>
           <a mat-list-item routerLink="/offres" class="nav-item" ><mat-icon>stars</mat-icon> Offre</a>
