--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -99,5 +99,6 @@
     </div>
     <div *ngIf="isManager()" >
        <app-stat-rdv></app-stat-rdv>
+       <app-stat-paiement></app-stat-paiement>
     </div>
 </div>
