--- a/src/app/stat-paiement/stat-paiement.component.html
+++ b/src/app/stat-paiement/stat-paiement.component.html
@@ -1,4 +1,4 @@
-<h2 class="list-title">Nombre de rendez-vous par mois de l'année</h2>
+<h2 class="list-title">Chiffre d'affaire par mois de l'année</h2>
 <div>
     <ngx-charts-bar-vertical
         [results]="single"
