gestion depense et stat benefice

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -100,5 +100,6 @@
     <div *ngIf="isManager()" >
        <app-stat-rdv></app-stat-rdv>
        <app-stat-paiement></app-stat-paiement>
+       <app-stat-benefice></app-stat-benefice>
     </div>
 </div>
