--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -37,6 +37,7 @@
           <a mat-list-item routerLink="/employes" class="nav-item" ><mat-icon>supervised_user_circle</mat-icon> Employé</a>
           <a mat-list-item routerLink="/offres" class="nav-item" ><mat-icon>stars</mat-icon> Offre</a>
           <a mat-list-item routerLink="/manageService" class="nav-item" ><mat-icon>list_alt</mat-icon> Service</a>
+          <a mat-list-item routerLink="/depenses" class="nav-item" ><mat-icon>list_alt</mat-icon> Depense</a>
           <a mat-list-item routerLink="/profil" class="nav-item" ><mat-icon>account_circle</mat-icon> Profil</a>
         </mat-nav-list>
       </div>
