--- a/src/app/user/suivi-taches/suivi-taches.component.css
+++ b/src/app/user/suivi-taches/suivi-taches.component.css
@@ -11,22 +11,22 @@
 }
 
 /* Styling des zones */
-.zone { 
+.zone {
   flex: 1; /* Chaque zone prendra la même largeur */
- 
+
   border-radius: 5px; /* Bord arrondi */
   padding: 15px; /* Espacement interne */
   margin-bottom: 20px; /* Espacement en bas entre les zones */
   /* overflow-y: auto;  */
-  max-height: calc(140vh - 60px);  
 }
 .zones-container {
+  max-height: 30vh;
   display: flex; /* Utiliser flexbox */
   justify-content: space-between; /* Espacement égal entre les zones */
 }
 
 .zone {
-  
+
   flex: 1; /* Chaque zone prendra la même largeur */
   height: 300px;
 }
@@ -40,7 +40,7 @@
   min-height: 160px; /* Hauteur minimale de la zone de dépôt */
   border: 2px dashed #ccc; /* Bordure pointillée */
   border-radius: 5px; /* Bord arrondi */
-  padding: 10px; 
+  padding: 10px;
 }
 
 .item {
@@ -132,4 +132,7 @@
 .commission-item p {
   font-size: 16px;
   color: #666;
+}
+.mat-grid-tile{
+  padding-top: calc(50% + 0px) !important;
 }
