--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
             </mat-expansion-panel-header>
             <mat-nav-list>
               <a mat-list-item routerLink="/HistoriqueRDV" class="nav-item" ><mat-icon>book</mat-icon> Historique</a>
-              <a mat-list-item routerLink="/listeRDV" class="nav-item" ><mat-icon>calendar_today</mat-icon> Mes Rendez-vous aujourd'hui</a>
+              <a mat-list-item routerLink="/listeRDV" class="nav-item" ><mat-icon>calendar_today</mat-icon> Aujourd'hui</a>
             </mat-nav-list>
           </mat-expansion-panel>
           <mat-expansion-panel *ngIf="isEmploye()">
