--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -27,7 +27,7 @@
               <mat-panel-title><mat-icon>list_alt</mat-icon> Services</mat-panel-title>
             </mat-expansion-panel-header>
             <mat-nav-list>
-              <a mat-list-item routerLink="/servNonAssigne" class="nav-item" ><mat-icon>list_alt</mat-icon> Services non-assignés</a>
+              <a mat-list-item routerLink="/servNonAssigne" class="nav-item" ><mat-icon>list_alt</mat-icon>Non-assignés</a>
             </mat-nav-list>
           </mat-expansion-panel>
         </mat-nav-list>
