--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
+
+
 
   <title>Document</title>
 </head>
@@ -19,5 +26,22 @@
     <app-navbar></app-navbar>
     <app-footer></app-footer>
   </div>
+  <script src="../assets/js/jquery.min.js"></script>
+  <script src="../assets/js/jquery.min.js"></script>
+  <script src="../assets/js/popper.min.js"></script>
+  <script src="../assets/js/bootstrap.min.js"></script>
+  <script src="../assets/js/jquery.easing.1.3.js"></script>
+  <script src="../assets/js/jquery.waypoints.min.js"></script>
+  <script src="../assets/js/jquery.stellar.min.js"></script>
+  <script src="../assets/js/owl.carousel.min.js"></script>
+  <script src="../assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="../assets/js/aos.js"></script>
+  <script src="../assets/js/jquery.animateNumber.min.js"></script>
+  <script src="../assets/js/bootstrap-datepicker.js"></script>
+  <script src="../assets/js/jquery.timepicker.min.js"></script>
+  <script src="../assets/js/scrollax.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+  <script src="../assets/js/google-map.js"></script>
+  <script src="../assets/js/main.js"></script>
 </body>
 </html>
