--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <div class="navbar">
         <mat-nav-list *ngIf="isClient()" class="nav-item" >
           <a mat-list-item routerLink="/profil"  class="nav-item" ><mat-icon>account_circle</mat-icon> Profil</a>
-          <a mat-list-item routerLink="/home" class="nav-item" ><mat-icon>home</mat-icon> Accueil</a>
+          <a mat-list-item routerLink="/accueilClientBis" class="nav-item" ><mat-icon>home</mat-icon> Accueil</a>
           <a mat-list-item routerLink="/rdv" class="nav-item" ><mat-icon>event_note</mat-icon> Rendez-vous</a>
           <a mat-list-item routerLink="/historic" class="nav-item" ><mat-icon>book</mat-icon> Historiques</a>
         </mat-nav-list>
