--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,12 @@
   </div>
   <div *ngIf="isLoggedIn() && !isInscription()">
     <app-header></app-header>
-    <app-navbar></app-navbar>
+    <div *ngIf="isClient()">
+      <router-outlet ></router-outlet>
+    </div>
+    <div *ngIf="!isClient()" >
+      <app-navbar></app-navbar>
+    </div>
     <app-footer></app-footer>
   </div>
   <script src="../assets/js/jquery.min.js"></script>
