--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
-<mat-toolbar class="header">
+<mat-toolbar *ngIf="!isClient()" class="header">
   <mat-toolbar-row>
     <!-- <span><link rel="icon" type="image/png" href="beaute-verte.png"></span> -->
-    <div *ngIf="!isClient()">
+    <div >
       <button mat-icon-button (click)="toggleDiv()" class="menu">
         <mat-icon >menu</mat-icon>
       </button>
@@ -15,3 +15,22 @@
     </mat-menu>
   </mat-toolbar-row>
 </mat-toolbar>
+<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+  <div class="container">
+    <a class="navbar-brand" href="index.html"><span class="flaticon-lotus"></span>Energen</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="oi oi-menu"></span> Menu
+    </button>
+    <div class="collapse navbar-collapse" id="ftco-nav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active"><a mat-list-item routerLink="/profil" class="nav-link">Profile</a></li>
+        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="treatments.html" class="nav-link">Treatments</a></li>
+        <li class="nav-item"><a href="specialists.html" class="nav-link">Specialists</a></li>
+        <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
+        <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
