--- a/src/app/user/profil/profil.component.css
+++ b/src/app/user/profil/profil.component.css
@@ -1,5 +1,7 @@
+.profil-container{
+  background-color: white;
+}
 
-  
   .btn{
     background-color: #2c5044;
     color: #ffffff; /* Couleur du texte */
@@ -12,30 +14,30 @@
     color: #2a9b70;
     margin-bottom: 10px;
   }
-  
+
   .profil-info {
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 20px;
   }
-  
+
   .info-item {
     margin-bottom: 15px;
   }
-  
+
   .info-item strong {
     font-weight: bold;
   }
-  
+
   .info-item span {
     margin-left: 10px;
   }
-  
+
   .info-item ul {
     list-style-type: none;
     padding: 0;
   }
-  
+
   .info-item ul li {
     margin-left: 10px;
   }
@@ -63,5 +65,4 @@
     font-weight: bold;
     font-size: 1.5rem;
 }
-  
-  
+
