--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,7 +30,12 @@
         <li class="nav-item active"><a routerLink="/profil" class="nav-link">Profile</a></li>
         <li class="nav-item active"><a routerLink="/rdv" class="nav-link">Rendez-vous</a></li>
         <li class="nav-item active"><a routerLink="/historic" class="nav-link">Historiques</a></li>
+        <li class="nav-item active"><button class="nav-link" mat-menu-item (click)="logout()">Déconnexion</button></li>
+
       </ul>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="logout()">Déconnexion</button>
+        </mat-menu>
     </div>
   </div>
 </nav>
