--- a/src/app/historique-client/historique-client.component.css
+++ b/src/app/historique-client/historique-client.component.css
@@ -1,15 +1,18 @@
 .rdv-list {
     width: 100%; /* Utilise toute la largeur de la page */
-    margin-top: 40px; /* Marge en haut de la liste */
-    padding: 0 20px; /* Espacement intérieur pour une apparence aérée */
+    padding:20px; /* Espacement intérieur pour une apparence aérée */
     box-sizing: border-box; /* Inclut les bordures et les marges dans la largeur totale */
+    border-radius: 16px;
+    background-color: #fff;
+    border: 2px solid #2a9b70;
+    box-shadow: 0 0 4px 6px rgba(117, 117, 117, 0.25);
   }
-  
+
 .table {
   width: 100%; /* Utilise toute la largeur de la liste */
   border-collapse: collapse; /* Fusionne les bordures des cellules */
 }
-  
+
 /* Styles pour les en-têtes de colonnes */
 th {
   background-color: #f2f2f2; /* Couleur de fond */
@@ -22,15 +25,15 @@ td {
   border: 1px solid #ddd; /* Bordure */
   padding: 10px; /* Espacement intérieur */
 }
-  
+
 /* Styles pour le titre de la liste */
 .list-title {
   font-size: 24px; /* Taille de police */
   font-weight: bold; /* Texte en gras */
-  color: #2a9b70; 
+  color: #2a9b70;
 }
-  
-.service-details a { 
+
+.service-details a {
     text-decoration: none; /* Supprimer les soulignements des liens */
     color: #3498db; /* Couleur bleue pour les liens */
     margin-right: 8px; /* Espacement à droite */
@@ -43,4 +46,9 @@ td {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* Police de caractère */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre douce */
 }
-    
+.mat-mdc-button:not(:disabled){
+  color: #fff !important;
+}
+.btn[_ngcontent-ng-c3734140236]{
+  background-color: #2a9b70 !important;
+}
