Client: pas de navbar mais dans header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,10 +26,11 @@
     </button>
     <div class="collapse navbar-collapse" id="ftco-nav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active"><a routerLink="/accueilClientBis" class="nav-link">Accueil</a></li>
+        <li class="nav-item active"><a routerLink="/home" class="nav-link">Accueil</a></li>
         <li class="nav-item active"><a routerLink="/profil" class="nav-link">Profile</a></li>
-        <li class="nav-item active"><a routerLink="/rdv" class="nav-link">Rendez-vous</a></li>
+        <li class="nav-item active"><a routerLink="/rdv" class="nav-link">Nouveau rendez-vous</a></li>
         <li class="nav-item active"><a routerLink="/historic" class="nav-link">Historiques</a></li>
+        <li class="nav-item active"><a routerLink="/accueilClientBis" class="nav-link">Autres</a></li>
         <li class="nav-item active"><button class="nav-link" mat-menu-item (click)="logout()">Déconnexion</button></li>
 
       </ul>
