--- a/src/app/rdv/rdv.component.css
+++ b/src/app/rdv/rdv.component.css
@@ -36,8 +36,8 @@
   }
 
   .btn{
-    background-color: #2c5044;
-    color: #ffffff; /* Couleur du texte */
+    background-color: #2a9b70;
+    color: #ffffff !important; /* Couleur du texte */
     text-align: center; /* Alignement du texte au centre */
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* Police de caractère */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre douce */
