gestion preference - rdv offre speciale

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,7 +59,7 @@
                         <span class="libelle-fiche" >Delai : {{ service.delai }}</span>
                         </div>
                       <div class="libelle" >
-                      <span class="libelle-fiche">Commission : {{ service.commission }}</span>
+                      <span class="libelle-fiche">Prix : {{ service.prix }}Ar</span>
                       </div>
                     </div>
                   </div>
@@ -84,9 +84,26 @@
                         <span class="libelle-fiche" >Delai : {{ service.delai }}</span>
                         </div>
                       <div class="libelle" >
-                      <span class="libelle-fiche">Commission : {{ service.commission }}</span>
+                      <span class="libelle-fiche">Prix : {{ service.prix }}Ar</span>
                       </div>
+                     
                     </div>
+                    <strong>Prendre un rendez-vous :</strong>
+                    <div *ngIf="errorMessage !== ''" class="error-message">
+                        {{ errorMessage }}
+                    </div>
+                    <mat-form-field style="width: 100%;">
+                        <input matInput [matDatepicker]="picker" [(ngModel)]="selectedDate" (dateChange)="onDateChange($event)" readonly>
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                    {{' '}}
+                    <mat-form-field style="width: 100%;">
+                        <input [format]="24" matInput [ngxTimepicker]="timerPicker" [(ngModel)]="selectedTime" [disableClick]="true" readonly >
+                        <ngx-material-timepicker-toggle matSuffix [for]="timerPicker"></ngx-material-timepicker-toggle>
+                        <ngx-material-timepicker #timerPicker></ngx-material-timepicker>
+                    </mat-form-field><br>
+                    <button class="btn" mat-button (click)="addRDV()" >Enregistrer</button>
                     </div>
 
                 </li>
