--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
                             </div>
                           <p>
                               <a href="/rdv" class="btn btn-primary p-3 px-5 py-4 mr-md-2">Prendre rendez-vous</a>
-                              <a href="/profile" class="btn btn-outline-primary p-3 px-5 py-4 ml-md-2">Voir mon profil</a>
+                              <a href="/profil" class="btn btn-outline-primary p-3 px-5 py-4 ml-md-2">Voir mon profil</a>
                           </p>
                         </div>
                       </div>
